src/test/ui/issues/issue-16149.stderr
error[E0158]: statics from `extern` blocks cannot be referenced in patterns
  --> $DIR/issue-16149.rs:7:9
   |
LL |         externalValue => true,
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0158`.
